--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -1,3 +1,5 @@
+@import '@css/normalize.css';
+
 @import url('https://fonts.googleapis.com/css2?family=Nunito:wght@400;600;700&display=swap');
 /*@import url('https://fonts.googleapis.com/css?family=Poppins:300,400,500,600,700');*/
 /*@import url('https://fonts.googleapis.com/css?family=Roboto:300,400,500,600,700');*/
